# charliecloud

./: .gitignore  .gitmodules  .travis.yml  COPYRIGHT  Makefile  Makefile.am  Makefile.old  NOTICE  README  README.rst  VERSION  api.html  autogen.sh  best_practices.html  bugs.html  ch-checkns.html  ch-completion.bash.html  ch-convert.html  ch-fromhost.html  ch-image.html  ch-run-oci.html  ch-run.html  ch-ssh.html  ch-test.html  charliecloud.html  chroot-mount  chroot-umount  command-usage.html  configure.ac  copyright.html  create_configure.sh  custom_help.m4  debian  dev.html  docker_tips.html  faq.html  foo.c  fs-passthrough.html  history.html  image-setup.html  (+15 more)
doc/: #ch-fromhost.rst#  #faq.rst#  Makefile.am  _loc.rst  _py_env.rst  best_practices.rst  bugs.rst  cdi-nvidia.json  ch-build.rst  ch-build2dir.rst  ch-build2dir_desc.rst  ch-build_desc.rst  ch-builder2squash.rst  ch-builder2squash_desc.rst  ch-builder2tar_desc.rst  ch-checkns.rst  ch-completion.bash.rst  ch-convert.rst  ch-convert_desc.rst  ch-convert_dest.rst  ch-dir2squash.rst  ch-dir2squash_desc.rst  ch-fromhost.rst  ch-fromhost_desc.rst  ch-grow.rst  ch-grow_desc.rst  ch-image.rst  ch-image_desc.rst  ch-nudge.rst  ch-nudge_desc.rst  ch-pack-image.rst  ch-pack-image_desc.rst  ch-pull2dir_desc.rst  ch-pull2tar.rst  ch-pull2tar_desc.rst  ch-run-oci.rst  ch-run-oci_desc.rst  ch-run-squash_desc.rst  ch-run.rst  ch-run_desc.rst  (+25 more)
doc-src/: Makefile  Makefile.am  Makefile.in  README  RSYNC_EXCLUDE  api.rst  bugs.rst  ch-build.rst  ch-build2dir.rst  ch-build2dir_desc.rst  ch-build_desc.rst  ch-builder2squash.rst  ch-builder2squash_desc.rst  ch-builder2tar.rst  ch-builder2tar_desc.rst  ch-checkns.rst  ch-checkns_desc.rst  ch-dir2sqfs.rst  ch-dir2sqfs_desc.rst  ch-dir2squash_desc.rst  ch-dir2tar.rst  ch-dir2tar_desc.rst  ch-docker-run.rst  ch-docker-run_desc.rst  ch-docker2sqfs.rst  ch-docker2sqfs_desc.rst  ch-docker2squash.rst  ch-docker2squash_desc.rst  ch-docker2tar.rst  ch-docker2tar_desc.rst  ch-fromhost_desc.rst  ch-grow_desc.rst  ch-mount.rst  ch-mount_desc.rst  ch-mountsqfs.rst  ch-mountsqfs_desc.rst  ch-pull2dir.rst  ch-pull2dir_desc.rst  ch-pull2sqfs.rst  ch-pull2sqfs_desc.rst  (+43 more)
doc-src/_templates/: navigation.html
doc/examples/: Build.ch-pull2dir  Build.docker_pull  Dockerfile.nvidia
examples/: .dockerignore  Dockerfile.almalinux8  Dockerfile.almalinux_8ch  Dockerfile.alpine39  Dockerfile.alpineedge  Dockerfile.centos6  Dockerfile.centos7  Dockerfile.centos8  Dockerfile.centos_7ch  Dockerfile.debian9  Dockerfile.debian_11ch  Dockerfile.debian_9ch  Dockerfile.exhaustive  Dockerfile.libfabric  Dockerfile.mpich  Dockerfile.nvidia  Dockerfile.openmpi  Dockerfile.python3  Dockerfile.ubuntu1604  Makefile.am  README  bench.sh  dont-init-ucx-on-intel-cray.patch  fail.sh  null.sh  sandbox-make-files.sh  sandbox.py
examples/chtest/: Build  Makefile  dev_proc_sys.py  fs_perms.py  printns  setgroups.c  setuid.c  signal_out.py
examples/copy/: .dockerignore  Dockerfile  fileB  test.bats
examples/distroless/: Dockerfile  hello.py  test.bats
examples/exhaustive/: Dockerfile  test.bats
examples/hello/: .dockerignore  Dockerfile  hello.sh  test.bats  test.sh  util.sh
examples/lammps/: .dockerignore  Dockerfile  simple.patch  test.bats
examples/lammps_mpi/: test.bats
examples/lustre/: Dockerfile  test.bats
examples/mpibench/: Dockerfile  Dockerfile.mpich  Dockerfile.openmpi  test.bats  test.sh
examples/mpibench-1.6.5/: Dockerfile  moab.sh  test.sh
examples/mpihello/: .dockerignore  Dockerfile  Dockerfile.mpich  Dockerfile.openmpi  README  hello.c  moab.sh  mpihello.sh  slurm.sh  test.bats  test.sh
examples/multistage/: .dockerignore  Dockerfile  test.bats
examples/namespaces/: Makefile  syscalls  syscalls.c  userns  userns.c
examples/obspy/: Dockerfile  README  hello.py  test.bats
examples/paraview/: Dockerfile  cone.2ranks.vtk  cone.nranks.vtk  cone.serial.vtk  test.bats
examples/rstudio/: Dockerfile  README  compare.sh  login.py  model.R  rserver-auth.sh  rstudio_auth  run.py  start_rstudio  start_rstudio.sh  test.bats  test_rstudio.py
examples/seccomp/: Dockerfile  mknods.c  test.bats
examples/spack/: Dockerfile  libfuse.patch  packages.yaml  test.bats
examples/spark/: Dockerfile  moab.sh  slurm.sh  test.bats
examples/syscalls/: Makefile  pivot_root.c
examples/test.docker/: Dockerfile
examples/vm/: hello.sh
lib/: Makefile.am  base.sh  build.py  build_cache.py  charliecloud.py  fakeroot.py  filesystem.py  force.py  image.py  misc.py  modify.py  path.py  pull.py  push.py  python_modules  registry.py
lib/grpc_server/: ch-cri.py.in  charliecloud.socket  cri.proto  cri_pb2.py  cri_pb2_grpc.py  test_grpc_client.py
libexec/: Makefile.am  base.sh  ch.py  charliecloud.py  chpull.py
libexec/test/: Build.ch-build2dir  Dockerfile.build2dir  Makefile.am  build.bats  chtest-make-auto  docs-sane  run_first.bats
packaging/: Makefile.am  README  debian.sh  redhat.sh  requirements.txt  travis.sh
packaging/debian/: README  changelog  charliecloud.install  control  copyright  docs  rules  travis.sh  watch
packaging/el7/: Dockerfile  README  build  charliecloud.spec  travis.sh
packaging/fedora/: build  ch-test.el7.patch  ch-test.lib.patch  el7.patch  (+10 more)
test/: .dockerignore  0001-don-t-try-to-open-HFI-devices-with-UCX.patch  Build.build2dir  Build.buildah  Build.centos7xz  Build.ch-build2dir  Build.ch-pull2dir  Build.ch-pull2tar  Build.ch-pull2tar_docker  Build.ch-pull2tar_skopeo  Build.docker_pull  Build.missing  Build.skopeo-umoci  Docker_Pull.alpine36_dp  Docker_Pull.alpine39_dp  Dockerfile  Dockerfile.00_tiny  Dockerfile.alpine34  Dockerfile.alpine35  Dockerfile.alpine36  Dockerfile.alpineedge  Dockerfile.argenv  Dockerfile.build2dir  Dockerfile.centos6  Dockerfile.centos7  Dockerfile.debian8  Dockerfile.debian8openmpi  Dockerfile.debian9  Dockerfile.exhaustive  Dockerfile.fakeroot  Dockerfile.file-quirks  Dockerfile.fromhost  Dockerfile.metadata  Dockerfile.mpich  Dockerfile.nvidia  Dockerfile.ocimanifest  Dockerfile.openmpi  Dockerfile.quick  Dockerfile.symlink  Dockerfile.ubuntu1604  (+57 more)
(+312 files in other folders)
